@@ -43,8 +43,8 @@
 
 -define(APPLICATION, quickrand).
 
-% ?BITS53_INV is slightly less than (DBL_EPSILON / 2) to provide [0.0 .. 1.0]
--define(BITS53_INV, 1.1102230246251568e-16).  % 1 / 16#1fffffffffffff
+% 1 / (16#1fffffffffffff + 1) =:= math:pow(2, -53) to provide [0.0 .. 1.0]
+-define(DBL_EPSILON_DIV2, 1.1102230246251565e-16).
 
 -define(BYTES_RESOLUTION, 4). % bytes
 
